"""TAPA fast cosim"""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:pytest_rules.bzl", py_pytest_test = "py_test")

py_binary(
    name = "tapa-fast-cosim",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = [
        # Used only by tests to minimize dependencies and improve cache hit
        "//tests:__subpackages__",
    ],
    deps = [
        ":__main__",
    ],
)

py_library(
    name = "__main__",
    srcs = ["__main__.py"],
    visibility = ["//tapa:__pkg__"],
    deps = [
        ":common",
        ":config_preprocess",
        ":templates",
        ":verilator",
        ":vivado",
        "//tapa:__init__",
        "//tapa/remote",
        requirement("click"),
        requirement("psutil"),
    ],
)

py_library(
    name = "common",
    srcs = ["common.py"],
)

py_library(
    name = "config_preprocess",
    srcs = ["config_preprocess.py"],
    deps = [
        ":common",
        requirement("pydantic"),
        requirement("pyyaml"),
    ],
)

py_library(
    name = "templates",
    srcs = ["templates.py"],
    deps = [
        ":common",
        ":render",
    ],
)

py_library(
    name = "render",
    srcs = ["render.py"],
    data = glob([
        "assets/*.j2",
        "testdata/**/*",
    ]),
    deps = [
        ":common",
        requirement("jinja2"),
        requirement("pydantic"),
    ],
)

py_library(
    name = "verilator",
    srcs = ["verilator.py"],
    deps = [
        ":common",
        ":config_preprocess",
        ":verilator_build",
        ":verilator_dpi",
        ":verilator_ips",
        ":verilator_tb_core",
    ],
)

py_library(
    name = "verilator_build",
    srcs = ["verilator_build.py"],
)

py_library(
    name = "verilator_dpi",
    srcs = ["verilator_dpi.py"],
)

py_library(
    name = "verilator_ips",
    srcs = ["verilator_ips.py"],
)

py_library(
    name = "verilator_tb_axi",
    srcs = ["verilator_tb_axi.py"],
    data = glob(["assets/*.j2"]),
    deps = [
        ":common",
        requirement("jinja2"),
    ],
)

py_library(
    name = "verilator_tb_core",
    srcs = ["verilator_tb_core.py"],
    data = glob(["assets/*.j2"]),
    deps = [
        ":common",
        ":config_preprocess",
        requirement("jinja2"),
    ],
)

py_library(
    name = "verilator_tb_stream",
    srcs = ["verilator_tb_stream.py"],
    data = glob(["assets/*.j2"]),
    deps = [
        ":common",
        requirement("jinja2"),
    ],
)

py_test(
    name = "main_test",
    size = "small",
    srcs = ["main_test.py"],
    deps = [
        ":__main__",
        requirement("pytest"),
    ],
)

py_test(
    name = "render_test",
    srcs = ["render_test.py"],
    data = glob([
        "assets/*.j2",
        "testdata/**/*",
    ]),
    deps = [
        ":common",
        ":render",
        ":templates",
    ],
)

py_test(
    name = "verilator_build_test",
    srcs = ["verilator_build_test.py"],
    data = glob(["testdata/**/*"]),
    deps = [
        ":verilator_build",
    ],
)

py_test(
    name = "verilator_dpi_test",
    srcs = ["verilator_dpi_test.py"],
    data = glob(["testdata/**/*"]),
    deps = [
        ":verilator_dpi",
    ],
)

py_test(
    name = "verilator_ips_test",
    srcs = ["verilator_ips_test.py"],
    deps = [
        ":verilator_ips",
    ],
)

py_test(
    name = "verilator_tb_axi_test",
    srcs = ["verilator_tb_axi_test.py"],
    deps = [
        ":common",
        ":verilator_tb_axi",
    ],
)

py_test(
    name = "verilator_tb_core_test",
    srcs = ["verilator_tb_core_test.py"],
    data = glob([
        "testdata/**/*",
    ]),
    deps = [
        ":common",
        ":verilator_tb_core",
    ],
)

py_test(
    name = "verilator_tb_stream_test",
    srcs = ["verilator_tb_stream_test.py"],
    deps = [
        ":common",
        ":verilator_tb_stream",
    ],
)

py_test(
    name = "verilator_test",
    srcs = ["verilator_test.py"],
    data = glob(["testdata/**/*"]),
    deps = [
        ":verilator",
        ":verilator_build",
    ],
)

py_library(
    name = "vivado",
    srcs = ["vivado.py"],
    data = select({
        "@platforms//os:linux": [
            "//fpga-runtime:cargo_release_artifacts",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//tapa/common:paths",
        "//tapa/remote",
        requirement("packaging"),
    ],
)

py_pytest_test(
    name = "config_preprocess_test",
    size = "small",
    srcs = ["config_preprocess_test.py"],
    deps = [
        ":config_preprocess",
    ],
)

py_pytest_test(
    name = "vivado_test",
    size = "small",
    srcs = ["vivado_test.py"],
    deps = [
        ":config_preprocess",
        ":vivado",
    ],
)

pkg_files(
    name = "pkg-link",
    srcs = ["tapa-fast-cosim.sh"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "usr/bin",
    renames = {"tapa-fast-cosim.sh": "tapa-fast-cosim"},
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg-link",
    ],
    visibility = ["//visibility:public"],
)
