"""Core program API of TAPA."""

# Copyright (c) 2025 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:pytest_rules.bzl", "py_test")

package(default_visibility = ["//tapa:__pkg__"])

py_library(
    name = "abc",
    srcs = ["abc.py"],
)

py_library(
    name = "directory",
    srcs = ["directory.py"],
    deps = [
        "//tapa:util",
        "//tapa/verilog/xilinx:const",
    ],
)

py_library(
    name = "hls_runner",
    srcs = ["hls_runner.py"],
)

py_library(
    name = "hls_aie_codegen",
    srcs = ["hls_aie_codegen.py"],
    deps = [
        "//tapa:task",
    ],
)

py_library(
    name = "hls",
    srcs = ["hls.py"],
    data = glob(["assets/*.j2"]),
    deps = [
        ":hls_aie_codegen",
        "//tapa:safety_check",
        "//tapa:task",
        "//tapa:util",
        "//tapa/backend",
        "//tapa/common:paths",
        "//tapa/program:abc",
        "//tapa/program:directory",
        requirement("jinja2"),
        requirement("psutil"),
    ],
)

py_test(
    name = "hls_test",
    size = "small",
    srcs = ["hls_test.py"],
    deps = [
        ":hls",
        ":hls_runner",
        "//tapa/backend",
    ],
)

py_library(
    name = "synthesis",
    srcs = ["synthesis.py"],
    deps = [
        ":abc",
        ":directory",
        "//tapa/backend",
        requirement("psutil"),
    ],
)

py_library(
    name = "pack",
    srcs = ["pack.py"],
    deps = [
        ":abc",
        ":directory",
        "//tapa/verilog/graphir_exporter",
        "//tapa/verilog/xilinx",
        requirement("pyyaml"),
    ],
)
