"""TAPA remote execution support build configuration."""

# Copyright (c) 2025 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:pytest_rules.bzl", "py_test")

py_library(
    name = "remote",
    srcs = glob(
        ["**/*.py"],
        exclude = ["test_*.py"],
    ),
    visibility = ["//tapa:__subpackages__"],
    deps = [
        requirement("pydantic"),
        requirement("pyyaml"),
    ],
)

py_test(
    name = "config_test",
    srcs = ["test_config.py"],
    deps = [
        ":remote",
    ],
)

py_test(
    name = "popen_test",
    srcs = ["test_popen.py"],
    deps = [
        ":remote",
    ],
)
