"""TAPA Python CLI compilation steps build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@tapa_deps//:requirements.bzl", "requirement")

py_test(
    name = "synth_test",
    size = "small",
    srcs = ["synth_test.py"],
    deps = [
        ":steps",
        "//tapa/backend",
        "//tapa/common:target",
        requirement("click"),
        requirement("pytest"),
    ],
)

py_library(
    name = "steps",
    srcs = glob(["**/*.py"]),
    visibility = ["//tapa:__subpackages__"],
    deps = [
        "//tapa:core",
        "//tapa:util",
        "//tapa/abgraph",
        "//tapa/backend",
        "//tapa/common",
        "//tapa/common:paths",
        "//tapa/common:target",
        "//tapa/graphir_conversion",
        requirement("click"),
    ],
)
