"""TAPA Python CLI compilation steps build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:pytest_rules.bzl", "py_test")

py_library(
    name = "synth_plan",
    srcs = ["synth_plan.py"],
    deps = ["//tapa/common:target"],
)

py_test(
    name = "synth_test",
    size = "small",
    srcs = ["synth_test.py"],
    deps = [
        ":steps",
        ":synth_plan",
        "//tapa/backend",
        "//tapa/common:target",
        requirement("click"),
    ],
)

py_library(
    name = "steps",
    srcs = glob(["**/*.py"]),
    visibility = ["//tapa:__subpackages__"],
    deps = [
        ":synth_plan",
        "//tapa:core",
        "//tapa:util",
        "//tapa/abgraph",
        "//tapa/backend",
        "//tapa/common",
        "//tapa/common:paths",
        "//tapa/common:target",
        "//tapa/graphir_conversion",
        requirement("click"),
    ],
)
