"""The gemv test for TAPA."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@vars//:vars.bzl", "HAS_XRT")
load("//bazel:tapa_rules.bzl", "tapa_xo")
load("//bazel:v++_rules.bzl", "vpp_xclbin")

exports_files(
    [
        ".",
        "gemv-host.cpp",
        "gemv.cpp",
        "gemv.h",
    ],
    visibility = [
        "//tests/apps:__pkg__",
        "//tests/functional:__subpackages__",
    ],
)

sh_test(
    name = "gemv",
    size = "medium",
    srcs = select({
        "//bazel:is_macos": ["//bazel:sim_env.sh"],
        "//conditions:default": ["//bazel:v++_env.sh"],
    }),
    args = ["$(location gemv-host)"],
    data = [":gemv-host"],
    env = {"TAPA_CONCURRENCY": "2"},
    tags = ["cpu:2"],
)

sh_test(
    name = "gemv-xosim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:v++_env.sh"],
    args = [
        "$(location gemv-host)",
        "--bitstream=$(location gemv-xo)",
    ],
    data = [
        ":gemv-host",
        ":gemv-xo",
        "//fpga-runtime:cargo_release_artifacts",
    ],
    tags = [
        "cpu:2",
    ],
)

sh_test(
    name = "gemv-xosim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:xrt_env.sh"],
    args = [
        "$(location gemv-host)",
        "--bitstream=$(location gemv-hw-emu-xclbin)",
    ],
    data = [
        ":gemv-host",
        ":gemv-hw-emu-xclbin",
    ],
    tags = [
        "cpu:2",
    ],
    target_compatible_with = [] if HAS_XRT else ["@platforms//:incompatible"],
)

cc_binary(
    name = "gemv-host",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    visibility = ["//tests/functional:__subpackages__"],
    deps = [
        "//tapa-lib:tapa-host",
        "@gflags",
        "@vitis_hls//:include",
    ],
)

tapa_xo(
    name = "gemv-xo",
    src = "gemv.cpp",
    hdrs = glob(["*.h"]),
    include = ["."],
    top_name = "Gemv",
)

sh_test(
    name = "gemv-verilator-zipsim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:sim_env.sh"],
    args = [
        "$(location gemv-host)",
        "--bitstream=$(location gemv-zip)",
        "--cosim_simulator=verilator",
    ],
    data = [
        ":gemv-host",
        ":gemv-zip",
        "//fpga-runtime:cargo_release_artifacts",
        "@verilator//:verilator_executable",
    ],
    env = {"VERILATOR_BIN": "$(rootpath @verilator//:verilator_executable)"},
    tags = ["cpu:2"],
)

tapa_xo(
    name = "gemv-zip",
    src = "gemv.cpp",
    hdrs = glob(["*.h"]),
    include = ["."],
    target = "xilinx-hls",
    top_name = "Gemv",
)

vpp_xclbin(
    name = "gemv-hw-emu-xclbin",
    platform_name = "xilinx_u250_gen3x16_xdma_4_1_202210_1",
    target = "hw_emu",
    target_compatible_with = [] if HAS_XRT else ["@platforms//:incompatible"],
    top_name = "Gemv",
    xo = ":gemv-xo",
)
