"""The network test for TAPA."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@vars//:vars.bzl", "HAS_XRT")
load("//bazel:tapa_rules.bzl", "tapa_xo")
load("//bazel:v++_rules.bzl", "vpp_xclbin")

exports_files(
    [
        ".",
        "network.cpp",
        "network.h",
    ],
    visibility = [
        "//tests/apps:__pkg__",
        "//tests/functional:__subpackages__",
    ],
)

sh_test(
    name = "network",
    size = "medium",
    srcs = select({
        "//bazel:is_macos": ["//bazel:sim_env.sh"],
        "//conditions:default": ["//bazel:v++_env.sh"],
    }),
    args = ["$(location network-host)"] + select({
        "//bazel:is_macos": ["1000"],
        "//conditions:default": [],
    }),
    data = [":network-host"],
    env = {"TAPA_CONCURRENCY": "2"},
    tags = ["cpu:2"],
)

sh_test(
    name = "network-xosim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:v++_env.sh"],
    args = [
        "$(location network-host)",
        "--bitstream=$(location network-xo)",
    ],
    data = [
        ":network-host",
        ":network-xo",
        "//fpga-runtime:cargo_release_artifacts",
    ],
    tags = [
        "cpu:2",
    ],
)

sh_test(
    name = "network-cosim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:xrt_env.sh"],
    args = [
        "$(location network-host)",
        "--bitstream=$(location network-hw-emu-xclbin)",
    ],
    data = [
        ":network-host",
        ":network-hw-emu-xclbin",
    ],
    tags = [
        "cpu:2",
    ],
    target_compatible_with = [] if HAS_XRT else ["@platforms//:incompatible"],
)

cc_binary(
    name = "network-host",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    visibility = ["//tests/functional:__subpackages__"],
    deps = [
        "//tapa-lib:tapa-host",
        "@gflags",
        "@vitis_hls//:include",
    ],
)

tapa_xo(
    name = "network-xo",
    src = "network.cpp",
    hdrs = ["network.h"],
    include = ["."],
    top_name = "Network",
)

sh_test(
    name = "network-verilator-zipsim",
    size = "enormous",
    timeout = "moderate",
    srcs = ["//bazel:sim_env.sh"],
    args = [
        "$(location network-host)",
        "--bitstream=$(location network-zip)",
        "--xosim_simulator=verilator",
    ],
    data = [
        ":network-host",
        ":network-zip",
        "//fpga-runtime:cargo_release_artifacts",
        "@verilator//:verilator_executable",
    ],
    env = {"VERILATOR_BIN": "$(rootpath @verilator//:verilator_executable)"},
    tags = ["cpu:2"],
)

tapa_xo(
    name = "network-zip",
    src = "network.cpp",
    hdrs = ["network.h"],
    include = ["."],
    target = "xilinx-hls",
    top_name = "Network",
)

vpp_xclbin(
    name = "network-hw-emu-xclbin",
    platform_name = "xilinx_u250_gen3x16_xdma_4_1_202210_1",
    target = "hw_emu",
    target_compatible_with = [] if HAS_XRT else ["@platforms//:incompatible"],
    top_name = "Network",
    xo = ":network-xo",
)
